--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
         <artifactId>poi-ooxml</artifactId>
         <version>3.15</version>
     </dependency>
-</dependencies>
 
+    <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>28.1-jre</version>
+    </dependency>
+
+</dependencies>
 </project>
