--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,9 @@
     </dependency>
 
     <dependency>
-        <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>log4j-core</artifactId>
-        <version>2.5</version>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>1.2.3</version>
     </dependency>
 
     <dependency>
@@ -33,13 +33,29 @@
         <artifactId>c3p0</artifactId>
         <version>0.9.1.2</version>
     </dependency>
-
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>1.6.6</version>
+        <scope>compile</scope>
+    </dependency>
     <dependency>
         <groupId>com.alibaba</groupId>
         <artifactId>fastjson</artifactId>
         <version>1.2.62</version>
     </dependency>
 
+    <dependency>
+        <groupId>org.csource</groupId>
+        <artifactId>fastdfs-client-java</artifactId>
+        <version>1.27-RELEASE</version>
+    </dependency>
+    <!-- 依赖上传图片 -->
+    <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>2.5</version>
+    </dependency>
     <dependency>
         <groupId>org.apache.poi</groupId>
         <artifactId>poi-ooxml</artifactId>
